# competitive_programming

./: CMakeLists.txt  README.md
algorithms/: CMakeLists.txt  insertion_sort.cpp  merge_sort.cpp
codeforces/gyms/gym104015_icpc_nerc/: problemA.cpp  problemB.cpp  problemC.cpp  problemD.cpp
codeforces/kotlin_heroes_practice7/: problem1.kt  problem2.kt  problem3.kt  problem4.kt  problem5.kt  problem6.kt
codeforces/round705/: problemA.cpp  problemB.cpp  problemC.cpp  problemD.cpp
codeforces/round728_div2/: problemA.cpp  problemB.cpp
codeforces/round741_div2/: problemA.cpp
codeforces/round828/: problemD.cpp  problemE.cpp  problemF.cpp
rucode3.0/intensive/: problemB1.cpp  problemC1.cpp
rucode3.0/qualification/: README.md  problemB.cpp  problemB_test.cpp  problemC.cpp  problemE.cpp  problemF.cpp  problemG.cpp  problemK.cpp  problemL.cpp
sit_star_2021/contest_round/: README.md
sit_star_2021/contest_round/src/: problemA.cpp  problemB.cpp  problemC.cpp  problemD.cpp  problemE.cpp  problemE_greedy.cpp
sit_star_2021/contest_round/tests/: problemC_test.cpp  problemE_test.cpp
sit_star_2021/practice_round/: README.md
sit_star_2021/practice_round/src/: problemA.cpp  problemB.cpp  problemC.cpp  problemD.cpp  problemE.cpp  problemF.cpp  problemF_greedy.cpp  problemG.cpp  problemG_greedy.cpp  problemG_helper.cpp  problemH.cpp  problemL.cpp
tinkoff_2021_spring/: problem1.cpp  problem2.cpp  problem3.cpp  problem5.cpp  problem6.cpp
vk_cup_2021/qualification/: problemA.cpp  problemB1.cpp  problemB1_2.cpp  problemB1_3.cpp  problemB1_4.cpp  problemC.cpp  problemD.cpp
(+1 files in other folders)
